--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ Icon
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
 
-# Node.js dependencies and logs (if you add them in the future)
+# Node.js dependencies and logs
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -39,6 +39,7 @@ yarn.lock
 .env.test.local
 .env.production.local
 test/
+ipad/
 
 # Temporary files
 tmp/
@@ -48,7 +49,7 @@ temp/
 logs/
 *.log
 
-# User-specific files that might contain sensitive data
+# User-specific files 
 **/*.backup
 **/*.bak
 **/*.swp
